--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ workflow.
 <p>
 All developments happen on <a href="https://github.com/HEP-FCC">github.com/HEP-FCC</a>. The best place to check
 for detailed information on a specific package thus is usually its homepage / github repository page. To get an
-  overview, there are some tutorials that may be helpful. Finally there is a <a
+  overview, there are some tutorials that may be helpful. Finally, there is a <a
   href="http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev">mailing list
   </a> for any questions
-  and suggestions.
+  and suggestions. For reference, the old website can be found <a here href="http://hep-fcc.github.io/FCCSW/tutorials/index.html"></a>
 <br><br>
 </p>
 
