--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ for detailed information on a specific package thus is usually its homepage / gi
   overview, there are some tutorials that may be helpful. Finally, there is a <a
   href="http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev">mailing list
   </a> for any questions
-  and suggestions. For reference, the old website can be found <a here href="http://hep-fcc.github.io/FCCSW/tutorials/index.html"></a>
+  and suggestions. For reference, the old website can be found <a href="http://hep-fcc.github.io/FCCSW/tutorials/index.html">here</a>.
 <br><br>
 </p>
 
