--- a/index.html
+++ b/index.html
@@ -16,6 +16,37 @@ integration, code format guidelines, linting and static analysis, release manage
 distribution and data persistency. This is possible due to the kind support of the EP-SFT group.
 
 </p>
+
+
+<h3> <strong> FCC software workshops/tutorials </strong> </h3>
+
+<p>
+The next tutorial sessions about the FCC software will take place on 22-23, 29 September 2020, in the context of the Snowmass 2021 studies.
+The tutorials will be given on Vidyo (or Zoom), and will run in the afternoons CET, corresponding to morning US time.
+The <a href="https://indico.cern.ch/event/945608/">agenda</a> is still developing (in particular times are not been frozen yet). Connection details will be soon communicated. </p>
+
+<p>
+List of recent workshop/tutorial events held at CERN:
+  <ul>
+    <li> <a href="https://indico.cern.ch/event/838435/timetable/?layout=room#147-link-to-software-tutorial">Software tutorial</a> as part of the FCC Physics week, on 15 January 2020 ; </li>
+    <li> <a href="https://indico.cern.ch/event/839794/">Software Workshop and hands-on tutorial</a> on 2-3 October 2019; an introduction to many topics. </li>
+  </ul>
+</p>
+
+<h3> Delphes Card Reference </h3>
+
+<p> A repository for Delphes cards is avilable in the <a https://github.com/delphes/delphes/tree/master/cards> GitHub repository </a> of the project, where example for many detector concepts exist.
+<p>
+  The Delphes cards used for the FCC-hh CDR and HL/HE-LHC yellow reports can be found here:
+  <ul>
+    <li> <a href="https://fccsw.web.cern.ch/fccsw/delphescards/download/delphes_cards_HL-HELHC_baseline.tgz" > delphes_cards_HL-HELHC_baseline.tgz </a></li>
+      <li> <a href="https://fccsw.web.cern.ch/fccsw/delphescards/download/delphes_cards_FCChh_baseline.tgz"> delphes_cards_FCChh_baseline.tgz </a> </li>
+</ul>
+Delphes cards for the most common solutions for future e+e- experiment detectors can be found at
+<a href="https://fccsw.web.cern.ch/fccsw/delphescards/"> https://fccsw.web.cern.ch/fccsw/delphescards/ </a>
+and available on lxplus at /eos/project/f/fccsw-web/www/delphescards (where relevant these cards are taken from
+the <a https://github.com/delphes/delphes/tree/master/cards> GitHub Delphes repository</a>).
+
 <h3>Conceptual Design Report</h3>
 The <a href="http://fcc-cdr.web.cern.ch/">summary volumes</a> have been released, with many
 physics and detector simulations carried out in FCCSW! We collaborate with CERN's <a
@@ -30,7 +61,7 @@ for detailed information on a specific package thus is usually its homepage / gi
   overview, there are some tutorials that may be helpful. Finally, there is a <a
   href="http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev">mailing list
   </a> for any questions
-  and suggestions. For reference, the old website can be found <a href="http://hep-fcc.github.io/FCCSW/tutorials/index.html">here</a>.
+  and suggestions. 
 <br><br>
 </p>
 
