--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ for detailed information on a specific package thus is usually its homepage / gi
 <p>
 <b>Tutorials:</b><br>
 <ul>
-  <li>see the <a href="https://github.com/HEP-FCC/fcc-tutorials">tutorials section.</a></li>
+  <li>see the <a href="https://hep-fcc.github.io/fcc-tutorials">tutorials section.</a></li>
 </ul>
 </p>
 
