--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ List of recent workshop/tutorial events held at CERN:
 
 <h3> Delphes Card Reference </h3>
 
-<p> A repository for Delphes cards is avilable in the <a https://github.com/delphes/delphes/tree/master/cards> GitHub repository </a> of the project, where example for many detector concepts exist.
+<p> A repository for Delphes cards is avilable in the <a href="https://github.com/delphes/delphes/tree/master/card"s> GitHub repository </a> of the project, where example for many detector concepts exist.
 <p>
   The Delphes cards used for the FCC-hh CDR and HL/HE-LHC yellow reports can be found here:
   <ul>
@@ -45,7 +45,7 @@ List of recent workshop/tutorial events held at CERN:
 Delphes cards for the most common solutions for future e+e- experiment detectors can be found at
 <a href="https://fccsw.web.cern.ch/fccsw/delphescards/"> https://fccsw.web.cern.ch/fccsw/delphescards/ </a>
 and available on lxplus at /eos/project/f/fccsw-web/www/delphescards (where relevant these cards are taken from
-the <a https://github.com/delphes/delphes/tree/master/cards> GitHub Delphes repository</a>).
+the <a href="https://github.com/delphes/delphes/tree/master/cards"> GitHub Delphes repository</a>).
 
 <h3>Conceptual Design Report</h3>
 The <a href="http://fcc-cdr.web.cern.ch/">summary volumes</a> have been released, with many
