--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@ distribution and data persistency. This is possible due to the kind support of t
 <h3> <strong> FCC software workshops/tutorials </strong> </h3>
 
 <p>
-The next tutorial sessions about the FCC software will take place on 22-23, 29 September 2020, in the context of the Snowmass 2021 studies.
-The tutorials will be given on Vidyo (or Zoom), and will run in the afternoons CET, corresponding to morning US time.
-The <a href="https://indico.cern.ch/event/945608/">agenda</a> is still developing (in particular times are not been frozen yet). Connection details will be soon communicated. </p>
+  The next tutorial sessions about the FCC software is scheduled for 19-21 October 2022 at CERN (in-presence-only), to be confirmed on September 19th, 2022.
+  The developing agenda is available at <a href="https://indico.cern.ch/event/1182767/">https://indico.cern.ch/event/1182767/</a>. </p>
+
 
 <p>
-List of recent workshop/tutorial events held at CERN:
+List of previous workshop/tutorial events::
   <ul>
+    <li> <a href="https://indico.cern.ch/event/945608/timetable/?layout=room#147-link-to-software-tutorial">Software tutorial</a> in the context of the Snowmass 2021 studies ; </li>
     <li> <a href="https://indico.cern.ch/event/838435/timetable/?layout=room#147-link-to-software-tutorial">Software tutorial</a> as part of the FCC Physics week, on 15 January 2020 ; </li>
     <li> <a href="https://indico.cern.ch/event/839794/">Software Workshop and hands-on tutorial</a> on 2-3 October 2019; an introduction to many topics. </li>
   </ul>
