Adding 'FCC Software Meetings' section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@ Common software helps to avoid duplicated effort and compare results. In additio
 group provides infrastructure and services such as build systems, testing and continuous
 integration, code format guidelines, linting and static analysis, release management and software
 distribution and data persistency. This is possible due to the kind support of the EP-SFT group.
-
 </p>
+
+
+<h3>FCC Software Meetings</h3>
+
+Our regular software meetings are organized usually on the last Monday of the
+month and cover generally useful tooling. The Indico category can be found
+<a href="https://indico.cern.ch/category/7969/">here</a>.
 
 
 <h3 class="mt-5 mb-3"> <strong> FCC software workshops/tutorials </strong> </h3>
