Updated meetings text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ distribution and data persistency. This is possible due to the kind support of t
 <h3>FCC Software Meetings</h3>
 
 Our regular software meetings are organized usually on the last Monday of the
-month and cover generally useful tooling. The Indico category can be found
+month to discuss general matters related to software and computing, including
+tools and resources. The Indico category can be found
 <a href="https://indico.cern.ch/category/7969/">here</a>.
 
 
